--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.4",
+    "@sparticuz/chromium": "^131.0.1",
     "@supabase/supabase-js": "^2.46.1",
     "ai": "^4.0.4",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +24,7 @@
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.460.0",
     "next": "^15.0.4",
+    "playwright-core": "^1.50.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "shadcn-ui": "^0.9.3",
